infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer
  name: portfolio
spec:
  rules:
    - host: steven.streller.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: portfolio
                port:
                  number: 80
  tls:
    - hosts:
        - steven.streller.net
      secretName: steven.streller.net
